--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -17,3 +17,72 @@ title: London Calling May 2022
 ## CMAT
 
 
+## Courting
+
+
+## Dora Jar
+
+
+## Ducks Ltd
+
+
+## Enumclaw
+
+
+## Ethan P Flynn
+
+
+## flowerkid
+
+
+## IAN SWEET
+
+
+## illuminati hotties
+
+
+## Kills Birds
+
+
+## Lime Garden
+
+
+## Lunar Vacation
+
+
+## Modern Nature
+
+
+## MICHELLE
+
+
+## Nixer
+
+
+## Penelope Isles
+
+
+## Pist Idiots
+
+
+## Silverbacks
+
+
+## Surfbort
+
+
+## Sweeping Promises
+
+
+## The Clockworks
+
+
+## TOPS
+
+
+## Water From Your Eyes
+
+
+## Wet Leg 
+
+
