--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -6,7 +6,7 @@ title: London Calling May 2022
 
 # The Playlist
 
-<p align="center"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2P8D0ZEyOSA4roNsSUUDVP?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></p>
+<p align="center"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2P8D0ZEyOSA4roNsSUUDVP?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></p>
 
 # The Artists
 
