--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -11,13 +11,18 @@ title: London Calling May 2022
 # The Artists
 
 ## Aaron Smith
-From Polmont (just outside Falkirk, the location of Scotland's young offenders institution), this guy has got some critics in a bit of a lather. He's basically one man and his piano, a singer-songwriter with all that entails. He's got a decent voice, very chilled. I wouldn;t make an effort to get in early to see him but wouldn't avoid him if we were already in. 
+From Polmont (just outside Falkirk, the location of Scotland's young offenders institution), this guy has got some critics in a bit of a lather. He's basically one man and his piano, a singer-songwriter with all that entails. He's got a decent voice, very chilled. I wouldn't make an effort to get in early to see him but wouldn't avoid him if we were already in. 
 
 This is Unconditional
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yqP9MtmUJ2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Automotion
+From London and led by Liam Gallagher's eldest son Lennon Gallagher, this isn't the lad rock that his dad does. The music is rocky and interesting with a few nice bits of guitar work. Will they set the world on fire? Probably not, but we should go and see them.
+
+This is them live a few months back
+<iframe width="560" height="315" src="https://www.youtube.com/embed/puEqVPFDN64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 
 ## Cash Savage and the Last Drinks
