--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -26,24 +26,52 @@ This is them live a few months back
 
 
 ## Cash Savage and the Last Drinks
+Very early 80's post punk. Good, worth seeing. From Melbourne, been on the go since 2008 the band's line tends to change with Cash Savage really been the only consistent member, but they've had good reviews over the years
+
+This is Rat-A-Tat-Tat
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ngsd6mWAWBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## CMAT
+A bit poppy, a bit country, inoffensive easy listening. Wouldn't avoid her, she's from Dublin and released her first album early in 2022. She calls herself a global pop star - I guess we'll see. 
+
+This is Every Bottle is My Boyfriend
+<iframe width="645" height="363" src="https://www.youtube.com/embed/dQFNinlZVFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Courting
+Someone has been listening to Fontaines DC and Slaves. Punky, rocky and raucous. From Liverpool and worth seeing
+
+This is them live in 2021
+<iframe width="645" height="363" src="https://www.youtube.com/embed/Pvttr0peHeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Dora Jar
+From California, Billie Eilish is a fan and Dora has been opening for her recently. Not getting into this at all, a couple of big sounds but mainly introverted warbling. Would need to be in the mood for this one
+
+This is her live in 2021
+<iframe width="645" height="363" src="https://www.youtube.com/embed/mhjRKhmCCDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Ducks Ltd
+From Ontario but spending a lot of time in Australia, there's a strong thread of 80's pop in this - highlighted by the fact they've covered the Jesus and MAry Chain (not fantastically well but at least they tried). The music is light rock, reasonable to listen to. We should probably give them a go. 
+
+This is them live in March 2022
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ekABKwhovmI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Enumclaw
+This copuld be quite good live or they might just disappear up their own backsides. Definitely worth checking them out to see which way they go. They're from Washington state and they've been described as "scuzzy indie rock". There's a bit of a Nirvana vibe about them, though the music isn't as good. 
+
+This is Fast n All
+<iframe width="645" height="363" src="https://www.youtube.com/embed/x_acAPULk38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Ethan P Flynn
+Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. 
+
+This is Are You Doing This to Hurt Me?
+<iframe width="645" height="363" src="https://www.youtube.com/embed/NzLNuOj5h04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## flowerkid
