--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -68,7 +68,7 @@ This is Fast n All
 
 
 ## Ethan P Flynn
-Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. 
+Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. I wouldn't go in early just to see him though. 
 
 This is Are You Doing This to Hurt Me?
 <iframe width="645" height="363" src="https://www.youtube.com/embed/NzLNuOj5h04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
