--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -66,24 +66,30 @@ This copuld be quite good live or they might just disappear up their own backsid
 This is Fast n All
 <iframe width="645" height="363" src="https://www.youtube.com/embed/x_acAPULk38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
 ## Ethan P Flynn
 Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. I wouldn't go in early just to see him though. 
 
 This is Are You Doing This to Hurt Me?
 <iframe width="645" height="363" src="https://www.youtube.com/embed/NzLNuOj5h04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
-## flowerkid
-
-
 ## IAN SWEET
+AKA Jilian Medford from Los Angeles. Not sure about this at all, the music is good but the vocals don't do anything for me to the extent that they detract from it a little bit. I reckon if we went to check her out we'd probably lose interest after a while - it's a shame but it's just not my kind of music. 
 
+This is #23
+<iframe width="645" height="363" src="https://www.youtube.com/embed/74l5zeEopD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## illuminati hotties
+Female fronted, American indie rock band from LA. There's an element of surfer chick rock going on here which is never a good thing and could be worth checking out.
+
+This is them live a month or so ago
+<iframe width="645" height="363" src="https://www.youtube.com/embed/gFpQnoElnms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Kills Birds
+Female fronted , kind of grungy punky rock. It's no surprise that David Grohl apparently likes them. Another bunch from LA at this LC, we should definitely see them. 
+
+This is them opening for Foo Fighters in April 2021
+<iframe width="645" height="363" src="https://www.youtube.com/embed/ySlmEYNAqXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Lime Garden
