--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -149,6 +149,13 @@ Very early 80's post punk. Good, worth seeing. From Melbourne, been on the go si
 This is Rat-A-Tat-Tat
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ngsd6mWAWBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+## Nixer
+Upstairs
+Sounds like 80's electronic pop-rock. This is banging! They;re from Ireland, although one lives in Dublin and one in London. It's a shame they're on last as it'll be an effort to keep going long enough to see them. We should make the effort though cos I think they'll definitely be worth it.
+
+This is People Feel
+<iframe width="645" height="363" src="https://www.youtube.com/embed/dN8HVVapv9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 
 
