--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -11,7 +11,7 @@ title: London Calling May 2022
 # The Artists and Running Order - Friday
 
 ## The Heavy Heavy
-Downstairs
+Downstairs\
 
 ## IAN SWEET
 Upstairs\
@@ -28,130 +28,131 @@ This is them live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/ZCjOZ9w8Y6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Water From Your Eyes
-Upstairs
+Upstairs\
 
 
 ## Kills Birds
-Downstairs
+Downstairs\
 Female fronted , kind of grungy punky rock. It's no surprise that David Grohl apparently likes them. Another bunch from LA at this LC, we should definitely see them. 
 
 This is them opening for Foo Fighters in April 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/ySlmEYNAqXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Michelle
-Upstairs
-A New York indie pop collective apparently. They're a bit hit and miss to be honest, some of their tracks are well put together and are even catchy with some good basslines and some jangly guitars. But some of it is self indulgent rubbish. They're on after 10 so I reckon we'll definitely be about, we might as well go an see them. 
+Upstairs\
+A New York indie pop collective apparently. They're a bit hit and miss to be honest, some of their tracks are well put together and are even catchy with some good basslines and some jangly guitars. But some of it is self indulgent rubbish. They're on after 10 so I reckon we'll definitely be about, we might as well go and see them. 
 
 This is Expiration Date
 <iframe width="545" height="363" src="https://www.youtube.com/embed/m4BOjqxgmR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## illuminati hotties
-Downstairs
+Downstairs\
 Female fronted, American indie rock band from LA. There's an element of surfer chick rock going on here which is never a bad thing and could be worth checking out.
 
 This is them live a month or so ago
 <iframe width="645" height="363" src="https://www.youtube.com/embed/gFpQnoElnms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Ducks Ltd
-Upstairs
-From Ontario but spending a lot of time in Australia, there's a strong thread of 80's pop in this - highlighted by the fact they've covered the Jesus and MAry Chain (not fantastically well but at least they tried). The music is light rock, reasonable to listen to. We should probably give them a go. 
+Upstairs\
+From Ontario but spending a lot of time in Australia, there's a strong thread of 80's pop in this - highlighted by the fact they've covered the Jesus and Mary Chain (not fantastically well but at least they tried). The music is light rock, reasonable to listen to. We should probably give them a go. 
 
 This is them live in March 2022
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ekABKwhovmI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## The Clockworks
-Downstairs
+Downstairs\
 
 
 ## Courting
-Upstairs - in a rather strange bit of scheduling, they're going to be on at the same time as the Clockworks, kicking off around halfway through the Clockworks set, so we'll have to decide pretty quickly if we want to go and check them out are stay for the rest of Clockworks
+Upstairs\ 
+In a rather strange bit of scheduling, they're going to be on at the same time as the Clockworks, kicking off around halfway through the Clockworks set, so we'll have to decide pretty quickly if we want to go and check them out or stay for the rest of Clockworks\
 Someone has been listening to Fontaines DC and Slaves. Punky, rocky and raucous. From Liverpool and worth seeing
 
 This is them live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/Pvttr0peHeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Surfbort
-Downstairs 
+Downstairs\ 
 
 
 # The Artists and Running Order - Saturday
 
 ## Aaron Smith
-Upstairs
+Upstairs\
 From Polmont (just outside Falkirk, the location of Scotland's young offenders institution), this guy has got some critics in a bit of a lather. He's basically one man and his piano, a singer-songwriter with all that entails. He's got a decent voice, very chilled. I wouldn't make an effort to get in early to see him but wouldn't avoid him if we were already in. 
 
 This is Unconditional
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yqP9MtmUJ2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Automotion
-Upstairs
+Upstairs\
 From London and led by Liam Gallagher's eldest son Lennon Gallagher, this isn't the lad rock that his dad does. The music is rocky and interesting with a few nice bits of guitar work. Will they set the world on fire? Probably not, but we should go and see them.
 
 This is them live a few months back
 <iframe width="560" height="315" src="https://www.youtube.com/embed/puEqVPFDN64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Ethan P Flynn
-Downstairs
+Downstairs\
 Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. I wouldn't go in early just to see him though. 
 
 This is Are You Doing This to Hurt Me?
 <iframe width="645" height="363" src="https://www.youtube.com/embed/NzLNuOj5h04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Lunar Vacation
-Upstairs
+Upstairs\
 Yet another female fronted band for this edition of LC. This lot are from Atlanta, Georgia, it's difficult to find much about them online other than some fairly gushing reviews from their local press. They're not bad to be fair, quite light, jangly in places, reasonably listenable - I wouldn't avoid them and reckon we should give them a go. 
 
 This is them live from earlier this year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/yILhCwnvzAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Penelope Isles
-Downstairs
+Downstairs\
 
 ## CMAT
-Upstairs
+Upstairs\
 A bit poppy, a bit country, inoffensive easy listening. Wouldn't avoid her, she's from Dublin and released her first album early in 2022. She calls herself a global pop star - I guess we'll see. 
 
 This is Every Bottle is My Boyfriend
 <iframe width="645" height="363" src="https://www.youtube.com/embed/dQFNinlZVFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## TOPS
-Downstairs
+Downstairs\
 
 ## Silverbacks
-Upstairs
+Upstairs\
 
 ## Dora Jar
-Downstairs
+Downstairs\
 From California, Billie Eilish is a fan and Dora has been opening for her recently. Not getting into this at all, a couple of big sounds but mainly introverted warbling. Would need to be in the mood for this one
 
 This is her live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/mhjRKhmCCDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Modern Nature
-Upstairs
+Upstairs\
 The description of this band on the LC website makes me want to run away fast in the opposite direction - "bucolic folk and experimental jazz". Originally from Blackpool, the Guardian seems to love these guys describing them as worthy, serious, compelling and mesmerising. I've given them a fair hearing and I'm really not convinced in all honesty, they're playing upstairs on Saturday just before Wet Leg come on downstairs and I reckon whether or not we go to check them out will depend entirely on whether or not we hang around for the whole of the Dora Jar set before them
 
 There's not much on Youtube for them, so this is a video that's also on the LC site. This is Footsteps:
 <iframe width="645" height="363" src="https://www.youtube.com/embed/hceTNlSye4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Wet Leg
-Downstairs
+Downstairs\
 
 
 ## Pist Idiots
-Upstairs
+Upstairs\
 
 
 ## Cash Savage and the Last Drinks
-Downstairs
+Downstairs\
 Very early 80's post punk. Good, worth seeing. From Melbourne, been on the go since 2008 the band's line tends to change with Cash Savage really been the only consistent member, but they've had good reviews over the years
 
 This is Rat-A-Tat-Tat
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ngsd6mWAWBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Nixer
-Upstairs
-Sounds like 80's electronic pop-rock. This is banging! They;re from Ireland, although one lives in Dublin and one in London. It's a shame they're on last as it'll be an effort to keep going long enough to see them. We should make the effort though cos I think they'll definitely be worth it.
+Upstairs\
+Sounds like 80's electronic pop-rock. This is banging! They're from Ireland, although one lives in Dublin and one in London. It's a shame they're on last as it'll be an effort to keep going long enough to see them. We should make the effort though cos I think they'll definitely be worth it.
 
 This is People Feel
 <iframe width="645" height="363" src="https://www.youtube.com/embed/dN8HVVapv9c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
