--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -61,6 +61,7 @@ This is them live in March 2022
 
 ## The Clockworks
 Downstairs\
+Possibly one of the bands of the weekend. Rocky, punky with a classic sound that we’ve heard before and always does well. From Galway, we should definitely see them
 
 
 ## Courting
@@ -73,6 +74,7 @@ This is them live in 2021
 
 ## Surfbort
 Downstairs\ 
+Mad shit, American punk – fast and furious with a female singer. Formed in 2015 in Brooklyn
 
 
 # The Artists and Running Order - Saturday
@@ -107,6 +109,7 @@ This is them live from earlier this year
 
 ## Penelope Isles
 Downstairs\
+Female fronted light, dream pop
 
 ## CMAT
 Upstairs\
@@ -120,6 +123,7 @@ Downstairs\
 
 ## Silverbacks
 Upstairs\
+Another lot that sound like they’ve been listening to Fontaines DC, but there’s more to them than that – elements of 70’s and 80’s pop rock mixed in with the rock philosophy. It’s good and they're from Dublin. 
 
 ## Dora Jar
 Downstairs\
@@ -141,6 +145,7 @@ Downstairs\
 
 ## Pist Idiots
 Upstairs\
+I liked this pretty much from the opening of the first track. Guitar rock, it’s great. Only problem is they’re on upstairs straight after Wet Leg who’s set we’re probably not going to want to leave early. 
 
 
 ## Cash Savage and the Last Drinks
