--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -11,56 +11,56 @@ title: London Calling May 2022
 # The Artists and Running Order - Friday
 
 ## The Heavy Heavy
-Downstairs\
+*Downstairs*\
 
 ## IAN SWEET
-Upstairs\
+*Upstairs*\
 AKA Jilian Medford from Los Angeles. Not sure about this at all, the music is good but the vocals don't do anything for me to the extent that they detract from it a little bit. I reckon if we went to check her out we'd probably lose interest after a while - it's a shame but it's just not my kind of music. 
 
 This is #23
 <iframe width="645" height="363" src="https://www.youtube.com/embed/74l5zeEopD8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Lime Garden
-Downstairs\
+*Downstairs*\
 A female four piece from Brighton, a lot of reviewers seem to like describing them as "genre-bending" which sounds to me like one writer has come up with a meaningless phrase and the rest of them have ripped it off. Anne Mac seems to like them, they seem to still be trying to find their sound. It's chilled and laid back, with some interesting stuff going on and I reckon they'd be worth checking out.
 
 This is them live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/ZCjOZ9w8Y6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Water From Your Eyes
-Upstairs\
+*Upstairs*\
 
 
 ## Kills Birds
-Downstairs\
+*Downstairs*\
 Female fronted , kind of grungy punky rock. It's no surprise that David Grohl apparently likes them. Another bunch from LA at this LC, we should definitely see them. 
 
 This is them opening for Foo Fighters in April 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/ySlmEYNAqXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Michelle
-Upstairs\
+*Upstairs*\
 A New York indie pop collective apparently. They're a bit hit and miss to be honest, some of their tracks are well put together and are even catchy with some good basslines and some jangly guitars. But some of it is self indulgent rubbish. They're on after 10 so I reckon we'll definitely be about, we might as well go and see them. 
 
 This is Expiration Date
 <iframe width="545" height="363" src="https://www.youtube.com/embed/m4BOjqxgmR0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## illuminati hotties
-Downstairs\
+*Downstairs*\
 Female fronted, American indie rock band from LA. There's an element of surfer chick rock going on here which is never a bad thing and could be worth checking out.
 
 This is them live a month or so ago
 <iframe width="645" height="363" src="https://www.youtube.com/embed/gFpQnoElnms" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Ducks Ltd
-Upstairs\
+*Upstairs*\
 From Ontario but spending a lot of time in Australia, there's a strong thread of 80's pop in this - highlighted by the fact they've covered the Jesus and Mary Chain (not fantastically well but at least they tried). The music is light rock, reasonable to listen to. We should probably give them a go. 
 
 This is them live in March 2022
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ekABKwhovmI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## The Clockworks
-Downstairs\
+*Downstairs*\
 Possibly one of the bands of the weekend. Rocky, punky with a classic sound that we’ve heard before and always does well. From Galway, we should definitely see them
 
 This is them live last year
@@ -68,7 +68,7 @@ This is them live last year
 
 
 ## Courting
-Upstairs\
+*Upstairs*\
 In a rather strange bit of scheduling, they're going to be on at the same time as the Clockworks, kicking off around halfway through the Clockworks set, so we'll have to decide pretty quickly if we want to go and check them out or stay for the rest of Clockworks\
 Someone has been listening to Fontaines DC and Slaves. Punky, rocky and raucous. From Liverpool and worth seeing
 
@@ -76,87 +76,87 @@ This is them live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/Pvttr0peHeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Surfbort
-Downstairs\
+*Downstairs*\
 Mad shit, American punk – fast and furious with a female singer. Formed in 2015 in Brooklyn, might be worth seeing but at the same time they're on last on Friday night and we might be done by then, not convinced we should force ourselves to hang around waiting for them. 
 
-This is then live last year
+This is them live last year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/kfXNzyS9ZG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 # The Artists and Running Order - Saturday
 
 ## Aaron Smith
-Upstairs\
+*Upstairs*\
 From Polmont (just outside Falkirk, the location of Scotland's young offenders institution), this guy has got some critics in a bit of a lather. He's basically one man and his piano, a singer-songwriter with all that entails. He's got a decent voice, very chilled. I wouldn't make an effort to get in early to see him but wouldn't avoid him if we were already in. 
 
 This is Unconditional
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yqP9MtmUJ2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Automotion
-Upstairs\
+*Upstairs*\
 From London and led by Liam Gallagher's eldest son Lennon Gallagher, this isn't the lad rock that his dad does. The music is rocky and interesting with a few nice bits of guitar work. Will they set the world on fire? Probably not, but we should go and see them.
 
 This is them live a few months back
 <iframe width="560" height="315" src="https://www.youtube.com/embed/puEqVPFDN64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Ethan P Flynn
-Downstairs\
+*Downstairs*\
 Originally from Yorkshire, he studied at the Guildhall School of Music and dropped out at 18, so clearly he's talented. The music is definitely interesting, not exactly jump up and down and shake your head bangers, but I reckon it'll be worth checking out. I wouldn't go in early just to see him though. 
 
 This is Are You Doing This to Hurt Me?
 <iframe width="645" height="363" src="https://www.youtube.com/embed/NzLNuOj5h04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Lunar Vacation
-Upstairs\
+*Upstairs*\
 Yet another female fronted band for this edition of LC. This lot are from Atlanta, Georgia, it's difficult to find much about them online other than some fairly gushing reviews from their local press. They're not bad to be fair, quite light, jangly in places, reasonably listenable - I wouldn't avoid them and reckon we should give them a go. 
 
 This is them live from earlier this year
 <iframe width="645" height="363" src="https://www.youtube.com/embed/yILhCwnvzAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Penelope Isles
-Downstairs\
+*Downstairs*\
 Female fronted light, dream pop from the Isle of Man.
 
 This is them live in January 2022
 <iframe width="645" height="363" src="https://www.youtube.com/embed/YY8gyJ3oaRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## CMAT
-Upstairs\
+*Upstairs*\
 A bit poppy, a bit country, inoffensive easy listening. Wouldn't avoid her, she's from Dublin and released her first album early in 2022. She calls herself a global pop star - I guess we'll see. 
 
 This is Every Bottle is My Boyfriend
 <iframe width="645" height="363" src="https://www.youtube.com/embed/dQFNinlZVFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## TOPS
-Downstairs\
+*Downstairs*\
 
 ## Silverbacks
-Upstairs\
+*Upstairs*\
 Another lot that sound like they’ve been listening to Fontaines DC, but there’s more to them than that – elements of 70’s and 80’s pop rock mixed in with the rock philosophy. It’s good and they're from Dublin. 
 
 This is Dunkirk
 <iframe width="645" height="363" src="https://www.youtube.com/embed/trMhSw5xcp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Dora Jar
-Downstairs\
+*Downstairs*\
 From California, Billie Eilish is a fan and Dora has been opening for her recently. Not getting into this at all, a couple of big sounds but mainly introverted warbling. Would need to be in the mood for this one
 
 This is her live in 2021
 <iframe width="645" height="363" src="https://www.youtube.com/embed/mhjRKhmCCDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Modern Nature
-Upstairs\
+*Upstairs*\
 The description of this band on the LC website makes me want to run away fast in the opposite direction - "bucolic folk and experimental jazz". Originally from Blackpool, the Guardian seems to love these guys describing them as worthy, serious, compelling and mesmerising. I've given them a fair hearing and I'm really not convinced in all honesty, they're playing upstairs on Saturday just before Wet Leg come on downstairs and I reckon whether or not we go to check them out will depend entirely on whether or not we hang around for the whole of the Dora Jar set before them
 
 There's not much on Youtube for them, so this is a video that's also on the LC site. This is Footsteps:
 <iframe width="645" height="363" src="https://www.youtube.com/embed/hceTNlSye4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Wet Leg
-Downstairs\
+*Downstairs*\
 
 
 ## Pist Idiots
-Upstairs\
+*Upstairs*\
 I liked this pretty much from the opening of the first track. Australian guitar rock, it’s great. Only problem is they’re on upstairs straight after Wet Leg who’s set we’re probably not going to want to leave early. 
 
 This is them doing 99 Bottles live
@@ -164,14 +164,14 @@ This is them doing 99 Bottles live
 
 
 ## Cash Savage and the Last Drinks
-Downstairs\
+*Downstairs*\
 Very early 80's post punk. Good, worth seeing. From Melbourne, been on the go since 2008 the band's line tends to change with Cash Savage really been the only consistent member, but they've had good reviews over the years
 
 This is Rat-A-Tat-Tat
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ngsd6mWAWBU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Nixer
-Upstairs\
+*Upstairs*\
 Sounds like 80's electronic pop-rock. This is banging! They're from Ireland, although one lives in Dublin and one in London. It's a shame they're on last as it'll be an effort to keep going long enough to see them. We should make the effort though cos I think they'll definitely be worth it.
 
 This is People Feel
