--- a/_pages/music_folder/LC202205.md
+++ b/_pages/music_folder/LC202205.md
@@ -12,6 +12,11 @@ title: London Calling May 2022
 
 ## The Heavy Heavy
 *Downstairs*\
+*Still to be listened to*\
+Originally from Brighton although some reviewers seem to think they're now based in London. They're described as being influenced by 60's American folk rock, bands such as Crosby, Stills and Nash, Bob Dylan and even some early Stones
+
+This is them live in 2021
+<iframe width="645" height="363" src="https://www.youtube.com/embed/JZzEOCeIUfc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## IAN SWEET
 *Upstairs*\
@@ -29,7 +34,11 @@ This is them live in 2021
 
 ## Water From Your Eyes
 *Upstairs*\
+* Still to be listened to\
+From Brooklyn, they've been on the go as a duo since 2016. Apparently they started out sounding like a New Orders rip off band, they're usually described as doing experimental electro pop. 
 
+This is them live from earlier this year
+<iframe width="645" height="363" src="https://www.youtube.com/embed/9aNv4pgl1ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Kills Birds
 *Downstairs*\
@@ -129,6 +138,11 @@ This is Every Bottle is My Boyfriend
 
 ## TOPS
 *Downstairs*\
+*Still to be listened to*\
+These guys are from Montreal and have been around since 2011. They've been described as doing fuzzy, honey dipped somngs reminiscent of Fkeetwood Mac. Apparently their music includes obvious 80's punk and 90's indie influences.
+
+This is them live last year
+<iframe width="645" height="363" src="https://www.youtube.com/embed/WaIpXOYFpgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Silverbacks
 *Upstairs*\
@@ -153,6 +167,11 @@ There's not much on Youtube for them, so this is a video that's also on the LC s
 
 ## Wet Leg
 *Downstairs*\
+*Still to be listened to*\
+These guys are effectively headlining Saturday and they're one band I've actually heard of before they were put on the running order for LC. Currently the darlings of 6 Music and the indie music press in the UK, they're fronted by two women who've been friends since music college. They're indie rock and they're going places - they've already sold out a tour to the US and we'd be crazy to miss them. 
+
+This is them live on Jools Holland 
+<iframe width="645" height="363" src="https://www.youtube.com/embed/RShSCNUzFcc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Pist Idiots
